# Peppa-Core

./: .cirrus.yml  .gitignore  CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  libbitcoinconsensus.pc.in
doc/man/: Makefile.am  bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoin-util.1  bitcoin-wallet.1  bitcoind.1
src/: Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bitcoin-chainstate.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  blockencodings.h  blockfilter.cpp  blockfilter.h  chain.cpp  (+128 more)
src/bench/: .gitignore  addrman.cpp  base58.cpp  bech32.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  block_assemble.cpp  ccoins_caching.cpp  chacha20.cpp  chacha_poly_aead.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  data.cpp  data.h  descriptors.cpp  duplicate_inputs.cpp  examples.cpp  gcs_filter.cpp  hashpadding.cpp  load_external.cpp  lockedpool.cpp  logging.cpp  mempool_eviction.cpp  mempool_stress.cpp  merkle_root.cpp  nanobench.cpp  peer_eviction.cpp  poly1305.cpp  prevector.cpp  rollingbloom.cpp  rpc_blockchain.cpp  rpc_mempool.cpp  strencodings.cpp  util_time.cpp  verify_script.cpp  wallet_balance.cpp  wallet_create_tx.cpp  (+1 more)
src/common/: bloom.cpp  bloom.h  init.cpp  init.h  interfaces.cpp  run_command.cpp  run_command.h  url.cpp  url.h
src/compat/: assumptions.h  byteswap.h  compat.h  cpuid.h  endian.h  stdin.cpp  stdin.h
src/consensus/: amount.h  consensus.h  merkle.cpp  merkle.h  params.h  tx_check.cpp  tx_check.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha_poly_aead.cpp  chacha_poly_aead.h  common.h  hkdf_sha256_32.cpp  hkdf_sha256_32.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  muhash.cpp  muhash.h  poly1305.cpp  poly1305.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_arm_shani.cpp  sha256_avx2.cpp  sha256_sse4.cpp  sha256_sse41.cpp  sha256_x86_shani.cpp  sha3.cpp  sha3.h  sha512.cpp  sha512.h  siphash.cpp  siphash.h
src/index/: base.cpp  base.h  blockfilterindex.cpp  blockfilterindex.h  coinstatsindex.cpp  coinstatsindex.h  disktxpos.h  txindex.cpp  txindex.h
src/init/: bitcoin-gui.cpp  bitcoin-node.cpp  bitcoin-qt.cpp  bitcoin-wallet.cpp  bitcoind.cpp  common.cpp  common.h
src/interfaces/: README.md  chain.h  echo.h  handler.h  init.h  ipc.h  node.h  wallet.h
src/ipc/: context.h  exception.h  interfaces.cpp  process.cpp  process.h  protocol.h
src/kernel/: bitcoinkernel.cpp  chain.cpp  chain.h  chainstatemanager_opts.h  checks.cpp  checks.h  coinstats.cpp  coinstats.h  context.cpp  context.h  cs_main.cpp  cs_main.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_persist.cpp  mempool_persist.h  validation_cache_sizes.h
src/logging/: timer.h
src/minisketch/: README.md  autogen.sh
src/node/: blockstorage.cpp  blockstorage.h  caches.cpp  caches.h  chainstate.cpp  chainstate.h  chainstatemanager_args.cpp  chainstatemanager_args.h  coin.cpp  coin.h  coins_view_args.cpp  coins_view_args.h  connection_types.cpp  connection_types.h  context.cpp  context.h  database_args.cpp  database_args.h  eviction.cpp  eviction.h  interface_ui.cpp  interface_ui.h  interfaces.cpp  mempool_args.cpp  mempool_args.h  mempool_persist_args.cpp  mempool_persist_args.h  miner.cpp  miner.h  minisketchwrapper.cpp  minisketchwrapper.h  psbt.cpp  psbt.h  transaction.cpp  transaction.h  txreconciliation.cpp  txreconciliation.h  utxo_snapshot.cpp  utxo_snapshot.h  validation_cache_args.cpp  (+1 more)
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  fees_args.cpp  fees_args.h  packages.cpp  packages.h  policy.cpp  policy.h  rbf.cpp  rbf.h  settings.cpp  settings.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  initexecutor.cpp  initexecutor.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  macos_appnap.h  macos_appnap.mm  main.cpp  modaloverlay.cpp  modaloverlay.h  networkstyle.cpp  networkstyle.h  (+86 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  external_signer.cpp  fees.cpp  mempool.cpp  mempool.h  mining.cpp  mining.h  net.cpp  node.cpp  output_script.cpp  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  register.h  request.cpp  request.h  server.cpp  server.h  server_util.cpp  server_util.h  signmessage.cpp  txoutproof.cpp  util.cpp  util.h
src/script/: bitcoinconsensus.cpp  bitcoinconsensus.h  descriptor.cpp  descriptor.h  interpreter.cpp  interpreter.h  keyorigin.h  miniscript.cpp  miniscript.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  signingprovider.cpp  signingprovider.h  standard.cpp  standard.h
src/secp256k1/: README.md  SECURITY.md  configure.ac  libsecp256k1.pc.in
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  argsman_tests.cpp  arith_uint256_tests.cpp  banman_tests.cpp  (+96 more)
(+1035 files in other folders)
