dist_man1_MANS=

if BUILD_PEPPACOIND
  dist_man1_MANS+=peppacoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=peppacoin-qt.1
endif

if BUILD_PEPPACOIN_CLI
  dist_man1_MANS+=peppacoin-cli.1
endif

if BUILD_PEPPACOIN_TX
  dist_man1_MANS+=peppacoin-tx.1
endif

if BUILD_PEPPACOIN_UTIL
  dist_man1_MANS+=peppacoin-util.1
endif

if ENABLE_WALLET
if BUILD_PEPPACOIN_WALLET
  dist_man1_MANS+=peppacoin-wallet.1
endif
endif
